tests/golden/fixtures/syntax-abstract-var-err-address-use/expected.err
Error: abstract var layout 'DEV_HANDLER' has no address
   ╭─[ tests/golden/fixtures/syntax-abstract-var-err-address-use/input.k65:6:5 ]
   │
 6 │     lda DEV_HANDLER
   │     ───────┬───────  
   │            ╰───────── layout-only symbol
   │ 
   │ Help: use `DEV_HANDLER:sizeof` or `DEV_HANDLER.field:offsetof` for layout metadata, or declare a real `var`/`data` symbol when storage is needed
   │ 
   │ Note: `abstract var` declares packed field offsets only. It emits no bytes, no linker symbol, and cannot be used as an instruction operand or address-of target.
───╯

Error: abstract var layout 'DEV_HANDLER.open' has no address
   ╭─[ tests/golden/fixtures/syntax-abstract-var-err-address-use/input.k65:7:5 ]
   │
 7 │     lda DEV_HANDLER.open
   │     ──────────┬─────────  
   │               ╰─────────── layout-only symbol
   │ 
   │ Help: use `DEV_HANDLER.open:offsetof` for the field offset or `DEV_HANDLER.open:sizeof` for the field size, or declare a real `var`/`data` symbol when storage is needed
   │ 
   │ Note: `abstract var` declares packed field offsets only. It emits no bytes, no linker symbol, and cannot be used as an instruction operand or address-of target.
───╯

Error: abstract var layout 'DEV_HANDLER' has no address
   ╭─[ tests/golden/fixtures/syntax-abstract-var-err-address-use/input.k65:8:11 ]
   │
 8 │     ldx &&DEV_HANDLER
   │           ─────┬─────  
   │                ╰─────── layout-only symbol
   │ 
   │ Help: use `DEV_HANDLER:sizeof` or `DEV_HANDLER.field:offsetof` for layout metadata, or declare a real `var`/`data` symbol when storage is needed
   │ 
   │ Note: `abstract var` declares packed field offsets only. It emits no bytes, no linker symbol, and cannot be used as an instruction operand or address-of target.
───╯
